# tinygltf_bug_reproduction

./: CMakeLists.txt  main.cpp
